src/static/css/styles.css
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

h1 {
    margin: 10px 0 10px 5px;
    text-shadow: 2px 2px 5px rgba(108, 108, 108, 0.7);
}

h2 {
    text-align: center;
    font-weight: normal;
    cursor: pointer;
}

.small-text {
    font-size: 14px;
    color: rgb(125 125 125);
}

body {
    background-color: #d8dbe2;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    height: 100vh;
}

p {
    margin: 0;
}

.users-data {
    display: flex;
    align-items: normal;
    justify-content: space-evenly;
    flex-direction: column;
}

.name-and-scores {
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
    font-size: 14px;
}

.name-container {
    display: inline-flex;
    align-items: center;
    margin: 6px 0 0 0;
    outline: none;
}

.hidden {
    display: none;
    margin-left: 5px;
}

.name-form {
    display: inline-flex;
    align-items: center;
    margin-left: 5px;
}

p#scores {
    margin: 6px 0 0 0;
}

.users-list {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
}

.usersHeader {
    list-style-type: none;
    padding: 0;
    margin: 5px 0 0 0;
    text-align: center;
    display: none;
}

.usersContainer {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    flex-direction: column;
    font-size: 16px;
}

.opponentScores {
    display: none;
}

.opponent_hand {
    width: 100px;
    height: 30px;
    justify-content: center;
    align-items: normal;
    display: none;
    flex-direction: row;
    position: relative;
}

.opponent_hand img {
    height: 100%;
    width: auto;
}

.opponent_card {
    position: absolute;
}

.opponent_card img {
    width: 20px;
    object-fit: cover;
}

#ws-id, #pS {
    font-weight: bold;
}

input[type="text"],
input[type="text"]:focus,
input {
    margin-right: 5px;
    outline: none;
    border: none;
}

input[type="text"]:focus,
button:focus {
    outline: none;
}


input[type="text"],
input[type="number"],
input[type="text"]:focus,
input[type="number"]:focus {
    font-family: 'Times New Roman', Times, serif;
    background-color: #d8dbe2;
    color: black;
    border: 3px solid rgb(125 125 125 / 70%);
    border-radius: 8px;
    font-size: 16px;
    box-shadow: 2px 2px 5px 2px rgb(108 108 108 / 70%);
    transition: box-shadow 0.2s ease, transform 0.2s ease;
    outline: none;
}

input[type="text"]:hover,
input[type="number"]:hover {
    box-shadow: 0 0 10px 5px rgba(255, 165, 0, 0.7);
}

input[type="text"]:focus,
input[type="number"]:focus {
    transform: scale(1.05);
    box-shadow: 0 0 10px 5px rgba(255, 165, 0, 0.7);
}

.name-input {
    margin-right: 5px;
    width: 130px;
}

button {
    font-family: 'Times New Roman', Times, serif;
    background-color: #f5f6f7;
    color: black;
    border: 3px solid rgb(125 125 125 / 70%);
    border-radius: 20px;
    height: 45px;
    width: 130px;
    font-size: 16px;
    cursor: pointer;
    box-shadow: 2px 2px 5px 2px rgb(108 108 108 / 70%);
    transition: transform 0.2s ease, box-shadow 0.2s ease;
}

#changeName {
    height: 35px;
    width: 120px;
    font-size: 14px;
    font-weight: normal;
}

#rulesButton {
    display: block;
    height: 35px;
    width: 100px;
    font-size: 16px;
    margin: 10px 5px 10px 0;
}

button:hover {
    transform: scale(1.05);
    box-shadow: 0 0 10px 5px rgba(255, 165, 0, 0.7);
}

button:active {
    transform: scale(0.95);
    box-shadow: 0 0 10px 5px rgba(255, 165, 0, 0.7);
}

.preLobbyControls {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10vh;
}

.joinLobbyControls {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.joinLobbyControls input {
    margin-right: 10px;
}

#createLobbyButton {
    margin: 35px 0 0 0;
}

.lobby-input {
    display: inline;
    margin-right: 5px;
}

.errorMessage {
    height: 20px;
    width: 95%;
    margin: 0 0 0 0;
    text-align: center;
    font-family: 'Times New Roman', Times, serif;
    color: red;
    font-size: 20px;
    z-index: 3;
}

.buttonContainer, .gameOverButtons {
    display: flex;
    justify-content: space-around;
    width: 100%;
    margin-top: 10px;
}

.gameOverButtons {
    margin-bottom: 10px;
}

#startButton:disabled, #joinLobbyButton:disabled, #changeName:disabled {
    pointer-events: none;
    opacity: 0.5;
    cursor: not-allowed;
    transform: none;
    box-shadow: none;
}

.rules-widget-window, .game-over-widget-window {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.7);
    justify-content: center;
    align-items: center;
    z-index: 1;
}

.rules-widget-content, .game-over-widget-content {
    background-color: rgba(255, 240, 212, 1);
    width: min(80vw, 55vh);
    overflow-y: auto;
    position: relative;
    border-radius: 20px;
    box-shadow: 0 0 30px 20px rgba(255, 165, 0, 0.7);
}

.close-rules-widget {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0 8px 0 8px;
    cursor: pointer;
    font-size: 25px;
    color: white;
    font-weight: bold;
    border-radius: 50%;
    background-color: #00000042;
    box-shadow: 0 0 13px 15px rgba(0, 0, 0, 0.3);
    transition: background-color 0.2s ease;
    z-index: 2;
}

.close-rules-widget:hover {
    background-color: #ddd;
}

.rules-column, .results-column {
    padding: 10px;
    overflow-y: auto;
    max-height: 60vh;
    font-size: 13px;
}

.results-column {
    text-align: center;
}

.rules-widget-content::-webkit-scrollbar, .game-over-widget-content::-webkit-scrollbar {
    width: 8px;
}

.rules-widget-content::-webkit-scrollbar-thumb, .game-over-widget-content::-webkit-scrollbar-thumb {
    background-color: #ccc;
    border-radius: 4px;
}

#cardsInHand {
    padding: 0 0 0 0;
    margin: 0 0 0 0;
}

#playerContainer {
    position: fixed;
    bottom: 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 20px;
    height: 195px;
}

.turnText {
    font-size: 18px;
    color: black;
    z-index: 1;
    text-align: center;
}

.wave-effect {
    animation: waveText 0.7s ease-out 5;
}

@keyframes waveText {
    0% {
        transform: scale(1);
        opacity: 1;
    }
    100% {
        transform: scale(1.2);
        opacity: 0;
    }
}

#playerHand {
    width: min(98vw, 1000px);
    display: flex;
    justify-content: center;
    align-items: flex-end;
    background-color: #d8dbe2;
    padding: 10px 0 10px 0;
    box-sizing: border-box;
    overflow: hidden;
    height: 195px;
    position: fixed;
    bottom: 0;
}

.card {
    width: 90px;
    height: 135px;
    position: absolute;
    transition: left 0.2s ease, bottom 0.2s ease;
}

.card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#rightCard img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.5s ease;
}

#currentCards {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 53%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    max-width: 345px;
    height: 150px;
    background-color: #d8dbe2;
    padding: 20px;
    box-sizing: border-box;
    gap: 17px;
}

.current-card {
    width: 90px;
    height: 135px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.betweenCurrentCards {
    display: flex;
    gap: 45px;
    flex-direction: column;
    justify-content: space-between;
}

#cards-left, #scores-rate-now {
    text-align: center;
    cursor: default;
}

.deck-len, .scores-rate {
    margin: 3px 0 0 0;
    padding: 0;
    font-weight: bold;
    font-size: 20px;
    cursor: default;
}

.scores-rate {
    position: relative;
}

.scores-rate::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 10px;
    height: 10px;
    background-color: rgb(255, 165, 0);
    border-radius: 50%;
    transform: translate(-50%, -50%) scale(1);
    opacity: 0;
}

.wave-effect::after {
    animation: wave 0.7s ease-out 5;
}

@keyframes wave {
    0% {
        transform: translate(-50%, -50%) scale(1);
        opacity: 0.8;
    }
    100% {
        transform: translate(-50%, -50%) scale(6);
        opacity: 0;
    }
}

.suit-symbol {
    margin: 0 0 0 0;
    padding: 0;
    font-weight: bold;
    font-size: 40px;
}

.current-card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.highlighted-card-img {
    box-shadow: 0 0 10px 5px rgba(255, 165, 0, 0.7);
    border-radius: 15px;
}

.jack-widget-window {
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: min(55vw, 55vh);
    height: min(55vw, 55vh);
    background-color: rgba(255, 240, 212, 1);
    border-radius: 20px;
    box-shadow: 0 0 30px 20px rgba(255, 165, 0, 0.7);
    padding: 0;
    box-sizing: border-box;
    z-index: 1;
}

.jack-widget-window::before,
.jack-widget-window::after {
    content: '';
    position: absolute;
    background-color: rgba(255, 165, 0, 0.3);
}

.jack-widget-window::before {
    width: 1px;
    height: 100%;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
}

.jack-widget-window::after {
    height: 1px;
    width: 100%;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
}

.jack-widget-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    width: 100%;
    height: 100%;
}

.jack-widget-cell-1, .jack-widget-cell-2, .jack-widget-cell-3, .jack-widget-cell-4 {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    text-align: center;
    cursor: pointer;
    aspect-ratio: 1;
    font-size: clamp(40px, 20vw, 150px);
}

.jack-widget-cell-1, .jack-widget-cell-4 {
    color: black;
}

.jack-widget-cell-2, .jack-widget-cell-3 {
    color: red;
}

.jack-widget-window p {
    font-size: inherit;
    margin: 0;
    line-height: 1;
}

footer {
}

footer p {
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.95);
    display: none;
    align-items: center;
    justify-content: center;
    z-index: 4;
}

.loader {
    width: 80%;
    max-width: 300px;
    text-align: center;
}

.progress-bar {
    width: 100%;
    height: 10px;
    background-color: #ddd;
    border-radius: 15px;
    overflow: hidden;
    position: relative;
}

.progress {
    width: 0;
    height: 100%;
    background-color: rgba(255, 165, 0, 1);
    border-radius: 15px;
}

